code/GCODE/gcodeCompiler/gcodeGrammarParser.java
// $ANTLR 3.5.1 C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g 2022-03-09 19:22:25

package gcodeCompiler;

import gcodeCompiler.*;
import gcodeCompiler.util.*;
import java.io.FileReader;
import java.io.FileNotFoundException;
import java.io.IOException;
import java.io.IOException;
import java.io.StringReader;
import java.util.ArrayList;
import gcodeCompiler.util.GCodeError;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

// TODO: Auto-generated Javadoc
/**
 * The Class gcodeGrammarParser.
 */
@SuppressWarnings("all")
public class gcodeGrammarParser extends Parser {
	
	/** The Constant tokenNames. */
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHANGE_TOOL", "CIRCLE_ACW", "CIRCLE_CW", 
		"COMMENT", "COMP_DIS", "COMP_L", "COMP_R", "COORD_ABS", "COORD_REL", "CORD_DIGIT", 
		"DIGIT", "END_PROG", "FREE_MOVE", "FREE_MOVE_SPEED", "I_CORD", "JOB_MOVE", 
		"JOB_MOVE_SPEED", "J_CORD", "K_CORD", "LUBE_OFF", "LUBE_ON", "N_BLOCK", 
		"ROT_TOOL_ACW", "ROT_TOOL_CW", "SCAN_ERROR", "STOP_TOOL", "TOOL_CHANGE", 
		"WS", "X_CORD", "Y_CORD", "Z_CORD"
	};
	
	/** The Constant EOF. */
	public static final int EOF=-1;
	
	/** The Constant CHANGE_TOOL. */
	public static final int CHANGE_TOOL=4;
	
	/** The Constant CIRCLE_ACW. */
	public static final int CIRCLE_ACW=5;
	
	/** The Constant CIRCLE_CW. */
	public static final int CIRCLE_CW=6;
	
	/** The Constant COMMENT. */
	public static final int COMMENT=7;
	
	/** The Constant COMP_DIS. */
	public static final int COMP_DIS=8;
	
	/** The Constant COMP_L. */
	public static final int COMP_L=9;
	
	/** The Constant COMP_R. */
	public static final int COMP_R=10;
	
	/** The Constant COORD_ABS. */
	public static final int COORD_ABS=11;
	
	/** The Constant COORD_REL. */
	public static final int COORD_REL=12;
	
	/** The Constant CORD_DIGIT. */
	public static final int CORD_DIGIT=13;
	
	/** The Constant DIGIT. */
	public static final int DIGIT=14;
	
	/** The Constant END_PROG. */
	public static final int END_PROG=15;
	
	/** The Constant FREE_MOVE. */
	public static final int FREE_MOVE=16;
	
	/** The Constant FREE_MOVE_SPEED. */
	public static final int FREE_MOVE_SPEED=17;
	
	/** The Constant I_CORD. */
	public static final int I_CORD=18;
	
	/** The Constant JOB_MOVE. */
	public static final int JOB_MOVE=19;
	
	/** The Constant JOB_MOVE_SPEED. */
	public static final int JOB_MOVE_SPEED=20;
	
	/** The Constant J_CORD. */
	public static final int J_CORD=21;
	
	/** The Constant K_CORD. */
	public static final int K_CORD=22;
	
	/** The Constant LUBE_OFF. */
	public static final int LUBE_OFF=23;
	
	/** The Constant LUBE_ON. */
	public static final int LUBE_ON=24;
	
	/** The Constant N_BLOCK. */
	public static final int N_BLOCK=25;
	
	/** The Constant ROT_TOOL_ACW. */
	public static final int ROT_TOOL_ACW=26;
	
	/** The Constant ROT_TOOL_CW. */
	public static final int ROT_TOOL_CW=27;
	
	/** The Constant SCAN_ERROR. */
	public static final int SCAN_ERROR=28;
	
	/** The Constant STOP_TOOL. */
	public static final int STOP_TOOL=29;
	
	/** The Constant TOOL_CHANGE. */
	public static final int TOOL_CHANGE=30;
	
	/** The Constant WS. */
	public static final int WS=31;
	
	/** The Constant X_CORD. */
	public static final int X_CORD=32;
	
	/** The Constant Y_CORD. */
	public static final int Y_CORD=33;
	
	/** The Constant Z_CORD. */
	public static final int Z_CORD=34;

	/**
	 * Gets the delegates.
	 *
	 * @return the delegates
	 */
	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	/**
	 * Instantiates a new gcode grammar parser.
	 *
	 * @param input the input
	 */
	public gcodeGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	
	/**
	 * Instantiates a new gcode grammar parser.
	 *
	 * @param input the input
	 * @param state the state
	 */
	public gcodeGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	/**
	 * Gets the token names.
	 *
	 * @return the token names
	 */
	@Override public String[] getTokenNames() { return gcodeGrammarParser.tokenNames; }
	
	/**
	 * Gets the grammar file name.
	 *
	 * @return the grammar file name
	 */
	@Override public String getGrammarFileName() { return "C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g"; }


	/** The h. */
	public gcodeGrammarHandler h;

	/**
	 * Instantiates a new gcode grammar parser.
	 *
	 * @param fileIn the file in
	 * @throws IOException Signals that an I/O exception has occurred.
	 */
	public gcodeGrammarParser(String fileIn) throws IOException {		
		this(new CommonTokenStream(
			new gcodeGrammarLexer(
				new ANTLRReaderStream(
					new FileReader(fileIn)))));
	}

	/**
	 * Setup.
	 */
	void setup () {
		h = new gcodeGrammarHandler(input);
	}

	/**
	 * Gets the handler.
	 *
	 * @return the handler
	 */
	public gcodeGrammarHandler getHandler() {
		return h;
	}

	/**
	 * Gets the error list.
	 *
	 * @return the error list
	 */
	public List<GCodeError> getErrorList () {
	  return h.getErrorList();
	}

	/**
	 * Display recognition error.
	 *
	 * @param tokenNames the token names
	 * @param e the e
	 */
	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
		String hdr = " * " + getErrorHeader(e);
		String msg = " - " + getErrorMessage(e, tokenNames);
		
		// gestione degli errori sintattici
		h.handleError(tokenNames, e, hdr, msg);
	}




	// $ANTLR start "gcode"
	/**
	 * Gcode.
	 *
	 * @throws RecognitionException the recognition exception
	 */
	// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:68:1: gcode : ( block )+ EOF ;
	public final void gcode() throws RecognitionException {
		 setup(); 
		try {
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:70:2: ( ( block )+ EOF )
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:71:2: ( block )+ EOF
			{
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:71:2: ( block )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==N_BLOCK) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:71:2: block
					{
					pushFollow(FOLLOW_block_in_gcode72);
					block();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_gcode76); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "gcode"



	// $ANTLR start "block"
	/**
	 * Block.
	 *
	 * @throws RecognitionException the recognition exception
	 */
	// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:80:1: block : n= N_BLOCK ( (info_g= info_geometriche )+ ( (info_t_M_list= info_3M )? | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? ) | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? |info_t_M_list= info_3M ) ;
	public final void block() throws RecognitionException {
		Token n=null;
		InfoGeometriche info_g =null;
		ArrayList<InfoTecnologicheM> info_t_M_list =null;
		InfoTecnologiche info_t =null;

		 
						ArrayList<InfoGeometriche> info_g_list = new ArrayList<InfoGeometriche>();
						ArrayList<InfoTecnologiche> info_t_list = new ArrayList<InfoTecnologiche>();
				 
		try {
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:85:2: (n= N_BLOCK ( (info_g= info_geometriche )+ ( (info_t_M_list= info_3M )? | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? ) | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? |info_t_M_list= info_3M ) )
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:86:3: n= N_BLOCK ( (info_g= info_geometriche )+ ( (info_t_M_list= info_3M )? | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? ) | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? |info_t_M_list= info_3M )
			{
			n=(Token)match(input,N_BLOCK,FOLLOW_N_BLOCK_in_block100); 
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:86:15: ( (info_g= info_geometriche )+ ( (info_t_M_list= info_3M )? | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? ) | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? |info_t_M_list= info_3M )
			int alt9=3;
			switch ( input.LA(1) ) {
			case CIRCLE_ACW:
			case CIRCLE_CW:
			case COMP_DIS:
			case COMP_L:
			case COMP_R:
			case COORD_ABS:
			case COORD_REL:
			case FREE_MOVE:
			case JOB_MOVE:
				{
				alt9=1;
				}
				break;
			case FREE_MOVE_SPEED:
			case JOB_MOVE_SPEED:
			case TOOL_CHANGE:
				{
				alt9=2;
				}
				break;
			case CHANGE_TOOL:
			case END_PROG:
			case LUBE_OFF:
			case LUBE_ON:
			case ROT_TOOL_ACW:
			case ROT_TOOL_CW:
			case STOP_TOOL:
				{
				alt9=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}
			switch (alt9) {
				case 1 :
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:87:9: (info_g= info_geometriche )+ ( (info_t_M_list= info_3M )? | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? )
					{
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:87:9: (info_g= info_geometriche )+
					int cnt2=0;
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( ((LA2_0 >= CIRCLE_ACW && LA2_0 <= CIRCLE_CW)||(LA2_0 >= COMP_DIS && LA2_0 <= COORD_REL)||LA2_0==FREE_MOVE||LA2_0==JOB_MOVE) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:87:11: info_g= info_geometriche
							{
							pushFollow(FOLLOW_info_geometriche_in_block118);
							info_g=info_geometriche();
							state._fsp--;

							 info_g_list.add(info_g); 
							}
							break;

						default :
							if ( cnt2 >= 1 ) break loop2;
							EarlyExitException eee = new EarlyExitException(2, input);
							throw eee;
						}
						cnt2++;
					}

					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:87:69: ( (info_t_M_list= info_3M )? | (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )? )
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==EOF||LA6_0==CHANGE_TOOL||LA6_0==END_PROG||(LA6_0 >= LUBE_OFF && LA6_0 <= ROT_TOOL_CW)||LA6_0==STOP_TOOL) ) {
						alt6=1;
					}
					else if ( (LA6_0==FREE_MOVE_SPEED||LA6_0==JOB_MOVE_SPEED||LA6_0==TOOL_CHANGE) ) {
						alt6=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 6, 0, input);
						throw nvae;
					}

					switch (alt6) {
						case 1 :
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:88:21: (info_t_M_list= info_3M )?
							{
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:88:21: (info_t_M_list= info_3M )?
							int alt3=2;
							int LA3_0 = input.LA(1);
							if ( (LA3_0==CHANGE_TOOL||LA3_0==END_PROG||(LA3_0 >= LUBE_OFF && LA3_0 <= LUBE_ON)||(LA3_0 >= ROT_TOOL_ACW && LA3_0 <= ROT_TOOL_CW)||LA3_0==STOP_TOOL) ) {
								alt3=1;
							}
							switch (alt3) {
								case 1 :
									// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:88:23: info_t_M_list= info_3M
									{
									pushFollow(FOLLOW_info_3M_in_block155);
									info_t_M_list=info_3M();
									state._fsp--;

									}
									break;

							}

							}
							break;
						case 2 :
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:89:23: (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )?
							{
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:89:23: (info_t= info_tecnologiche )+
							int cnt4=0;
							loop4:
							while (true) {
								int alt4=2;
								int LA4_0 = input.LA(1);
								if ( (LA4_0==FREE_MOVE_SPEED||LA4_0==JOB_MOVE_SPEED||LA4_0==TOOL_CHANGE) ) {
									alt4=1;
								}

								switch (alt4) {
								case 1 :
									// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:89:25: info_t= info_tecnologiche
									{
									pushFollow(FOLLOW_info_tecnologiche_in_block188);
									info_t=info_tecnologiche();
									state._fsp--;

									 info_t_list.add(info_t); 
									}
									break;

								default :
									if ( cnt4 >= 1 ) break loop4;
									EarlyExitException eee = new EarlyExitException(4, input);
									throw eee;
								}
								cnt4++;
							}

							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:89:84: (info_t_M_list= info_3M )?
							int alt5=2;
							int LA5_0 = input.LA(1);
							if ( (LA5_0==CHANGE_TOOL||LA5_0==END_PROG||(LA5_0 >= LUBE_OFF && LA5_0 <= LUBE_ON)||(LA5_0 >= ROT_TOOL_ACW && LA5_0 <= ROT_TOOL_CW)||LA5_0==STOP_TOOL) ) {
								alt5=1;
							}
							switch (alt5) {
								case 1 :
									// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:89:86: info_t_M_list= info_3M
									{
									pushFollow(FOLLOW_info_3M_in_block201);
									info_t_M_list=info_3M();
									state._fsp--;

									}
									break;

							}

							}
							break;

					}

					}
					break;
				case 2 :
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:92:10: (info_t= info_tecnologiche )+ (info_t_M_list= info_3M )?
					{
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:92:10: (info_t= info_tecnologiche )+
					int cnt7=0;
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==FREE_MOVE_SPEED||LA7_0==JOB_MOVE_SPEED||LA7_0==TOOL_CHANGE) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:92:12: info_t= info_tecnologiche
							{
							pushFollow(FOLLOW_info_tecnologiche_in_block262);
							info_t=info_tecnologiche();
							state._fsp--;

							 info_t_list.add(info_t); 
							}
							break;

						default :
							if ( cnt7 >= 1 ) break loop7;
							EarlyExitException eee = new EarlyExitException(7, input);
							throw eee;
						}
						cnt7++;
					}

					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:92:71: (info_t_M_list= info_3M )?
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==CHANGE_TOOL||LA8_0==END_PROG||(LA8_0 >= LUBE_OFF && LA8_0 <= LUBE_ON)||(LA8_0 >= ROT_TOOL_ACW && LA8_0 <= ROT_TOOL_CW)||LA8_0==STOP_TOOL) ) {
						alt8=1;
					}
					switch (alt8) {
						case 1 :
							// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:92:73: info_t_M_list= info_3M
							{
							pushFollow(FOLLOW_info_3M_in_block275);
							info_t_M_list=info_3M();
							state._fsp--;

							}
							break;

					}

					}
					break;
				case 3 :
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:93:10: info_t_M_list= info_3M
					{
					pushFollow(FOLLOW_info_3M_in_block294);
					info_t_M_list=info_3M();
					state._fsp--;

					}
					break;

			}

			 h.createNewBlock(n, info_g_list, info_t_list, info_t_M_list); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "info_3M"
	/**
	 * Info 3 M.
	 *
	 * @return the array list
	 * @throws RecognitionException the recognition exception
	 */
	// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:102:1: info_3M returns [ArrayList<InfoTecnologicheM> info_t_M_list] : info_t_M= info_tecnologiche_M (info_t_M= info_tecnologiche_M )? (info_t_M= info_tecnologiche_M )? ;
	public final ArrayList<InfoTecnologicheM> info_3M() throws RecognitionException {
		ArrayList<InfoTecnologicheM> info_t_M_list = null;


		InfoTecnologicheM info_t_M =null;


						info_t_M_list = new ArrayList<InfoTecnologicheM>();
				 
		try {
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:106:2: (info_t_M= info_tecnologiche_M (info_t_M= info_tecnologiche_M )? (info_t_M= info_tecnologiche_M )? )
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:107:3: info_t_M= info_tecnologiche_M (info_t_M= info_tecnologiche_M )? (info_t_M= info_tecnologiche_M )?
			{
			pushFollow(FOLLOW_info_tecnologiche_M_in_info_3M339);
			info_t_M=info_tecnologiche_M();
			state._fsp--;

			 info_t_M_list.add(info_t_M); 
			// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:107:67: (info_t_M= info_tecnologiche_M )?
			int alt10=2;
			switch ( input.LA(1) ) {
				case ROT_TOOL_CW:
					{
					alt10=1;
					}
					break;
				case ROT_TOOL_ACW:
					{
					alt10=1;
					}
					break;
				case STOP_TOOL:
					{
					alt10=1;
					}
					break;
				case CHANGE_TOOL:
					{
					alt10=1;
					}
					break;
				case LUBE_ON:
					{
					alt10=1;
					}
					break;
				case LUBE_OFF:
					{
					alt10=1;
					}
					break;
				case END_PROG:
					{
					alt10=1;
					}
					break;
			}
			switch (alt10) {
				case 1 :
					// C:\\Users\\ghisl\\Documents\\GitHub\\progetto_LFC\\codice_LFC\\src\\gcodeCompiler\\gcodeGrammar.g:107:69: info_t_M= info_tecnologiche_M
					{
					pushFollow(FOLLOW_info_tecnologiche_M_in_info_3M349);
					info_t_M=info_tecnologiche_M();
					state._fsp--;

					 info_t_M_list.add(info_t_M); 
					}
					break;

			}
